entity_macros/tests/ui/derive/ent/missing-database.stderr
error: No database field provided
 --> $DIR/missing-database.rs:4:1
  |
4 | struct TestEnt {
  | ^^^^^^
